Added a repositories service.

--- a/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Services & Dependency Injection/services-di/src/app/app.component.html
+++ b/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Services & Dependency Injection/services-di/src/app/app.component.html
@@ -9,4 +9,5 @@
 <div style="text-align: left;">
   <profile [apiUrl]="profileUrl"></profile>
   <followers [apiUrl]="profileUrl" *ngIf="profileUrl"></followers>
+  <repositories [apiUrl]="profileUrl" *ngIf="profileUrl"></repositories>
 </div>
