Added a list of all the most recent cars on the Home page.

--- a/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Modules & Routing/modules-routing/src/app/home/home.component.html
+++ b/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Modules & Routing/modules-routing/src/app/home/home.component.html
@@ -1,3 +1,26 @@
-<p>
-  home works!
-</p>
+<div>
+  <ul>
+    <li *ngFor="let car of cars">
+      {{car.listingDate}}
+      <div>
+        <label>Make</label>
+        <span>{{car.make}}</span>
+      </div>
+
+      <div>
+        <label>Model</label>
+        <span>{{car.model}}</span>
+      </div>
+
+      <div>
+        <label>Image</label>
+        <img src="{{car.image}}" alt="N/A" />
+      </div>
+
+      <div>
+          <label>Model</label>
+          <a href="cars/{{car.id}}">Details</a>
+      </div>
+    </li>
+  </ul>
+</div>
