--- a/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Modules & Routing/modules-routing/src/app/app.component.html
+++ b/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Modules & Routing/modules-routing/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div>
   <nav>
+    <a routerLink="/">Home</a>
     <a routerLink="/cars">Cars</a>
     <a routerLink="/owners">Owners</a>
   </nav>
