--- a/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Modules & Routing/modules-routing/src/app/owners/owner.list.component.html
+++ b/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Modules & Routing/modules-routing/src/app/owners/owner.list.component.html
@@ -15,7 +15,9 @@
     </div>
 
     <div class="col-md-2">
-        <span>{{owner.name}}</span>
+        <span>
+            <a href="owners/{{owner.id}}">{{owner.name}}</a>            
+        </span>
     </div>
 </div>
 
