--- a/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Modules & Routing/modules-routing/src/app/owners/owner.list.component.html
+++ b/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Modules & Routing/modules-routing/src/app/owners/owner.list.component.html
@@ -26,5 +26,7 @@
         <button *ngIf="showPrevPaging" (click)="onPrevClicked()">Prev</button>
         <input type="text" value="{{skip + 1}}" />
         <button *ngIf="showNextPaging" (click)="onNextClicked()">Next</button>
+
+        <a routerLink="/owners/add">Add Owner</a>        
     </div>
 </div>
