--- a/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Modules & Routing/modules-routing/src/app/owners/owner.details.component.html
+++ b/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Modules & Routing/modules-routing/src/app/owners/owner.details.component.html
@@ -62,3 +62,9 @@
         </div>
     </div>
 </div>
+
+<div class="row">
+    <div class="col-md-12">
+        <a routerLink="/owners/{{owner.id}}/edit">Edit</a>
+    </div>
+</div>
