--- a/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Modules & Routing/modules-routing/src/app/cars/car.details.component.html
+++ b/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Modules & Routing/modules-routing/src/app/cars/car.details.component.html
@@ -44,3 +44,9 @@
         </div>
     </div>
 </div>
+
+<div class="row">
+    <div class="col-md-12">
+        <a routerLink="/cars/{{car?.id}}/edit">Edit</a>
+    </div>
+</div>
