Added a round-image directive.

--- a/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Modules & Routing/modules-routing/src/app/cars/car.details.component.html
+++ b/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Modules & Routing/modules-routing/src/app/cars/car.details.component.html
@@ -16,7 +16,7 @@
         </div>
 
         <div>
-            <img src="{{car?.image}}" alt="N/A" />
+            <img round-image src="{{car?.image}}" alt="N/A" />
         </div>
 
         <div>
