Added the engine pipe.

--- a/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Modules & Routing/modules-routing/src/app/cars/car.details.component.html
+++ b/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Modules & Routing/modules-routing/src/app/cars/car.details.component.html
@@ -36,7 +36,7 @@
 
         <div>
             <label>Engine</label>
-            <div>{{car?.engine}}</div>
+            <div>{{car?.engine | engine: 'BG' }}</div>
         </div>
 
         <div>
